airlinecalendar-main/AirlineCalendar/force-app/main/default/objects/Airline_Booking__c/Airline_Booking__c.object-meta.xml
<CustomObject>
    <label>Airline Booking</label>
    <pluralLabel>Airline Bookings</pluralLabel>
    <nameField>
        <label>Booking Name</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>