airlinecalendar-main/AirlineCalendar/force-app/main/default/objects/Airline_Booking__c/fields/Passenger_Name__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Name__c</fullName>
    <label>Passenger Name</label>
    <type>Text</type>
    <length>100</length>
</CustomField>